shipping/k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-inventory-java-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app-inventory-java-deployment
  template:
    metadata:
      labels:
        app: sample-app-inventory-java-deployment
    spec:
      containers:
      - name: sample-app-inventory-java-app
        image: kuldeepevon/sample-inventory-app
        resources:
          limits: 
            memory: "128Mi"
            cpu: "256m"
        ports:
          - containerPort: 8080
        # env:
        #   - name: SPRING_DATA_MONGODB_HOST
        #     value: sample-db-inventory-service
        #   - name: SPRING_DATA_MONGODB_PORT
        #     value: "27017"
        #   - name: SPRING_DATA_MONGODB_DATABASE
        #     value: inventory
