shipping/k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-db-inventory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-db-inventory-deployment
  template:
    metadata:
      labels:
        app: sample-db-inventory-deployment
    spec:
      containers:
      - name: sample-db-inventory
        image: mongo
        resources:
          limits: 
            memory: "256Mi"
            cpu: "256m"
        ports:
          - containerPort: 27017
