shipping/k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-inventory-java-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      # nodePort: 30010
  selector:
    app: sample-app-inventory-java-deployment
  # type: LoadBalancer
