shipping/k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-db-inventory-service
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: sample-db-inventory-deployment
