shipping/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-inventory-java-ingress
  labels: 
    name: sample-app-inventory-java-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample-inventory.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-inventory-java-service
            port:
              number: 80
